--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -68,6 +68,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
                     android:paddingLeft="10dp"
+                    android:paddingRight="50dp"
                     android:focusedByDefault="true"
                     fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
