--- a/app/src/main/res/layout/list_item_movie.xml
+++ b/app/src/main/res/layout/list_item_movie.xml
@@ -47,7 +47,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Zom3aa"
+                android:text="Plex"
                 android:textStyle="bold"
                 android:textSize="9sp"
                 android:layout_marginBottom="20dp"
