--- a/app/src/main/res/layout/details_movie_fragment_layout.xml
+++ b/app/src/main/res/layout/details_movie_fragment_layout.xml
@@ -154,18 +154,13 @@
             </RelativeLayout>
 
         </RelativeLayout>
-
-        <com.google.android.gms.ads.AdView
-            xmlns:ads="http://schemas.android.com/apk/res-auto"
-
+        <RelativeLayout
             android:id="@+id/adView_details_fragment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            ads:adSize="BANNER"
-            android:layout_gravity="center"
-            ads:adUnitId="@string/banner_ad_unit_id">
-        </com.google.android.gms.ads.AdView>
+            android:gravity="center"
+            android:layout_alignParentBottom="true"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
