--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -184,15 +184,12 @@
         </LinearLayout>
         <!--END OF BOTTOM VIEW-->
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/adMobView"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            ads:adSize="BANNER"
-            android:layout_gravity="center"
-            ads:adUnitId="@string/banner_ad_unit_id">
-        </com.google.android.gms.ads.AdView>
+            android:gravity="center"
+            android:layout_alignParentBottom="true"/>
     </LinearLayout>
 
 
