centered the determine location button

--- a/app/src/main/res/layout/signup_layout.xml
+++ b/app/src/main/res/layout/signup_layout.xml
@@ -334,8 +334,7 @@
             android:layout_height="40dp"
             android:padding="5dp"
             android:textColor="@color/black"
-            android:gravity="center"
-            android:layout_marginLeft="30dp"
+            android:layout_centerHorizontal="true"
             android:textSize="15sp"
             android:textStyle="bold"
             android:backgroundTint="@color/white"
