setttings fragment new layout

--- a/app/src/main/res/layout/alertdialog_update.xml
+++ b/app/src/main/res/layout/alertdialog_update.xml
@@ -15,6 +15,7 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             >
             <ImageView
                 android:layout_width="wrap_content"
