--- a/app/src/main/res/layout/editprofile_fragment_layout.xml
+++ b/app/src/main/res/layout/editprofile_fragment_layout.xml
@@ -14,8 +14,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="30dp"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        >
+        android:paddingBottom="@dimen/activity_vertical_margin">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
