--- a/app/src/main/res/layout/editprofile_fragment_layout.xml
+++ b/app/src/main/res/layout/editprofile_fragment_layout.xml
@@ -5,340 +5,315 @@
     android:layout_width="match_parent"
     android:background="@color/colorPrimaryDark"
     android:layout_height="match_parent">
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:orientation="vertical"
         android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="30dp"
-        android:paddingBottom="@dimen/activity_vertical_margin">
+        android:paddingTop="30dp">
+
         <TextView
+            fontPath="fonts/brownregular.ttf"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Edit account"
-            android:textStyle="bold"
             android:layout_gravity="center"
-            android:textSize="22sp"
             android:layout_marginBottom="5dp"
-            fontPath="fonts/brownregular.ttf"
-            />
+            android:text="Edit account"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold" />
+
         <RelativeLayout
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:gravity="center"
             android:layout_gravity="center"
-            >
+            android:gravity="center">
+
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                app:srcCompat="@drawable/if_sed_10_2232321"
                 android:tint="@color/white"
-                />
+                app:srcCompat="@drawable/if_sed_10_2232321" />
 
         </RelativeLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="5dp"
+            android:orientation="vertical"
 
 
             >
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Full Name"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="Full Name"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="49dp">
+
                 <EditText
                     android:id="@+id/full_name"
+                    fontPath="fonts/brownregular.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
-                    android:paddingLeft="10dp"
-                    android:focusedByDefault="true"
-                    fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
-                    android:imeOptions="actionNext"
                     android:backgroundTint="@color/white"
+                    android:focusedByDefault="true"
+                    android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:textColorHint="@color/black"
+                    android:paddingLeft="10dp"
                     android:textColor="@color/black"
-                    />
+                    android:textColorHint="@color/black" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view_fullname"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp" />
             </RelativeLayout>
 
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="This appears on your plex profile."
-                android:textStyle="normal"
-                android:textSize="10sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="This appears on your plex profile."
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="5dp"
+            android:orientation="vertical"
 
 
             >
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Email"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="Email"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="49dp">
+
                 <EditText
                     android:id="@+id/email"
+                    fontPath="fonts/brownregular.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
-                    android:paddingLeft="10dp"
-                    fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
-                    android:imeOptions="actionNext"
                     android:backgroundTint="@color/white"
+                    android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:textColorHint="@color/black"
+                    android:paddingLeft="10dp"
                     android:textColor="@color/black"
-                    />
+                    android:textColorHint="@color/black" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view_email"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp" />
             </RelativeLayout>
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="You 'll need to confirm this email later."
-                android:textStyle="normal"
-                android:textSize="10sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="You 'll need to confirm this email later."
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="5dp"
+            android:orientation="vertical"
 
             >
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Password"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="Password"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="49dp">
+
                 <EditText
                     android:id="@+id/password"
+                    fontPath="fonts/brownregular.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
-                    android:paddingLeft="10dp"
-                    fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
-                    android:imeOptions="actionNext"
                     android:backgroundTint="@color/white"
+                    android:imeOptions="actionNext"
                     android:inputType="textPassword"
-                    android:textColorHint="@color/black"
+                    android:paddingLeft="10dp"
                     android:textColor="@color/black"
-                    />
+                    android:textColorHint="@color/black" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view_password"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp" />
             </RelativeLayout>
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Use at least eight characters."
-                android:textStyle="normal"
-                android:textSize="10sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="Use at least eight characters."
+                android:textColor="@color/white"
+                android:textSize="10sp"
+                android:textStyle="normal" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="5dp"
-            android:visibility="visible"
-            >
+            android:orientation="vertical"
+            android:visibility="visible">
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="Phone"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="Phone"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="49dp">
+
                 <EditText
                     android:id="@+id/phone"
+                    fontPath="fonts/brownregular.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
-                    android:paddingLeft="10dp"
-                    fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
-                    android:imeOptions="actionDone"
                     android:backgroundTint="@color/white"
+                    android:imeOptions="actionDone"
                     android:inputType="numberDecimal"
-                    android:textColorHint="@color/black"
+                    android:paddingLeft="10dp"
                     android:textColor="@color/black"
-                    />
+                    android:textColorHint="@color/black" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view_phone"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp" />
             </RelativeLayout>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_margin="5dp"
-            android:visibility="visible"
-            >
+            android:orientation="vertical"
+            android:visibility="visible">
+
             <TextView
+                fontPath="fonts/brownregular.ttf"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:text="What's your date of birth?"
-                android:textStyle="bold"
-                android:textSize="16sp"
                 android:layout_marginBottom="5dp"
-                fontPath="fonts/brownregular.ttf"
-                />
+                android:text="What's your date of birth?"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/Date_of_Birth"
+                    fontPath="fonts/brownregular.ttf"
                     android:layout_width="match_parent"
                     android:layout_height="49dp"
-                    android:paddingLeft="10dp"
-                    fontPath="fonts/brownregular.ttf"
                     android:background="@drawable/rounded_edittext"
-                    android:text="1996/8/1"
                     android:backgroundTint="@color/white"
-                    android:textColorHint="@color/black"
+                    android:paddingLeft="10dp"
+                    android:text="1996/8/1"
                     android:textColor="@color/black"
-                    />
+                    android:textColorHint="@color/black" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:id="@+id/animation_view_birth"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_centerVertical="true"
                     android:layout_alignParentRight="true"
-                    android:elevation="2dp"
-                    />
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="5dp"
+                    android:elevation="2dp" />
             </RelativeLayout>
 
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_height="wrap_content">
-            <Button
-                android:text="Add New Location"
-                android:layout_width="250dp"
-                android:layout_height="40dp"
-                android:padding="5dp"
-                android:textColor="@color/black"
-                android:gravity="center"
-                android:layout_marginLeft="30dp"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:backgroundTint="@color/white"
-                android:background="@drawable/oval"
-                android:id="@+id/determine_location" />
-            <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/animation_view_location"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_centerVertical="true"
-                android:layout_alignParentRight="true"
-                android:visibility="gone"
-                />
-        </RelativeLayout>
-
         <Button
-            android:layout_width="250dp"
-            android:layout_height="40dp"
-            android:text="Update Profile"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:layout_margin="10dp"
-            android:textSize="15sp"
-            android:textStyle="bold"
-            android:backgroundTint="@color/white"
-            android:background="@drawable/oval"
-            android:layout_gravity="center"
             android:id="@+id/buttonRegister"
-            />
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/oval"
+            android:backgroundTint="@color/white"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="Update Profile"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
