--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -1,227 +1,217 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
-    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     tools:context="com.vacuum.app.plex.Fragments.MainFragment.ProfileFragment">
 
-    <LinearLayout
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/layout1_editprofile"
-        android:gravity="right"
-        android:layout_marginTop="30dp"
-        android:padding="10dp"
-        >
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/if_sed_10_2232321"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            />
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme">
 
-        <TextView
+        <com.vacuum.app.plex.Utility.CollapsingImageLayout
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:minHeight="108dp"
+            android:fitsSystemWindows="true"
+            android:clickable="true"
+            android:id="@+id/layout1_editprofile"
+            android:foreground="@drawable/ripple_effect"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <ImageView
+                android:id="@+id/background"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimaryDark"
+                android:fitsSystemWindows="true"
+                android:scaleType="centerCrop"/>
+
+
+
+            <ImageView
+                android:id="@+id/avatar"
+                android:layout_width="96dp"
+                android:layout_height="96dp"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginBottom="96dp"
+                android:padding="2dp"
+                android:tint="@color/white"
+                app:srcCompat="@drawable/if_sed_10_2232321"/>
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginBottom="48dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textStyle="bold"
+                android:textColor="@color/white"
+                android:text="Mohamed Ebrahim"/>
+
+            <TextView
+                android:id="@+id/subtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:layout_marginBottom="24dp"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Edit Profile"/>
+
+
+        </com.vacuum.app.plex.Utility.CollapsingImageLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Edit Profile"
-            android:gravity="center_vertical"
-            android:layout_margin="3dp"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            />
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            app:srcCompat="@drawable/if_arrow_right_01_186409"
-            android:layout_gravity="center"
-            />
+            android:background="@color/colorPrimaryDark"
+            android:visibility="visible"
+            app:layout_scrollFlags="scroll|enterAlways"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:orientation="vertical">
 
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/medium_grey"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/layout2_payment"
-        android:gravity="right"
-        android:padding="10dp"
-        >
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/if_00_elastofont_store_ready_cards_2703082"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:orientation="horizontal"
+                android:background="@color/colorPrimaryDark"
+                android:id="@+id/layout2_payment"
+                android:gravity="right"
+                android:padding="10dp"
+                >
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:srcCompat="@drawable/if_00_elastofont_store_ready_cards_2703082"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="payment"
-            android:textSize="18sp"
-            android:gravity="center_vertical"
-            android:layout_margin="3dp"
-            android:textColor="@color/white"
-            />
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            app:srcCompat="@drawable/if_arrow_right_01_186409"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="payment"
+                    android:textSize="18sp"
+                    android:gravity="center_vertical"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/white"
+                    />
+                <ImageView
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    app:srcCompat="@drawable/if_arrow_right_01_186409"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/medium_grey"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/layout3_points"
-        android:gravity="right"
-        android:padding="10dp"
-        >
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/if_money_322468"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/medium_grey"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:orientation="horizontal"
+                android:background="@color/colorPrimaryDark"
+                android:id="@+id/layout3_points"
+                android:gravity="right"
+                android:padding="10dp"
+                >
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:srcCompat="@drawable/if_money_322468"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="2598 points"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="1"
+                    android:id="@+id/points"
+                    />
 
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="2598 points"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:layout_marginLeft="5dp"
-            android:layout_weight="1"
-            android:id="@+id/points"
-            />
+                <Button
+                    android:layout_width="0dp"
+                    android:layout_height="30dp"
+                    android:text="Add Points"
+                    android:padding="3dp"
+                    android:textColor="@color/black"
+                    android:gravity="center"
+                    android:layout_margin="3dp"
+                    android:layout_weight="1"
+                    android:textSize="10sp"
+                    android:textStyle="bold"
+                    android:background="@drawable/oval"
+                    android:layout_gravity="center"
+                    android:id="@+id/more_points"
+                    />
 
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:text="Add Points"
-            android:padding="3dp"
-            android:textColor="@color/black"
-            android:gravity="center"
-            android:layout_margin="3dp"
-            android:layout_weight="1"
-            android:textSize="10sp"
-            android:textStyle="bold"
-            android:background="@drawable/oval"
-            android:layout_gravity="center"
-            android:id="@+id/more_points"
-            />
-
-    </LinearLayout>
+            </LinearLayout>
 
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/medium_grey"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/layout_settings"
-        android:gravity="right"
-        android:padding="10dp"
-        >
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/if_settings_326699"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/medium_grey"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:orientation="horizontal"
+                android:background="@color/colorPrimaryDark"
+                android:id="@+id/layout_settings"
+                android:gravity="right"
+                android:padding="10dp"
+                >
+                <ImageView
+                    android:layout_width="32dp"
+                    android:layout_height="32dp"
+                    app:srcCompat="@drawable/if_settings_326699"
+                    android:layout_gravity="center"
+                    android:layout_margin="3dp"
+                    />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Settings"
-            android:textColor="@color/white"
-            android:gravity="center_vertical"
-            android:layout_margin="3dp"
-            android:textSize="18sp"
-            />
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            app:srcCompat="@drawable/if_arrow_right_01_186409"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/medium_grey"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="54dp"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark"
-        android:id="@+id/layout_close_account"
-        android:gravity="right"
-        android:padding="10dp"
-        >
-        <ImageView
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:srcCompat="@drawable/if_icon_close_circled_211650"
-            android:layout_gravity="center"
-            android:layout_margin="3dp"
-            />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Close Account"
-            android:textColor="@color/white"
-            android:gravity="center_vertical"
-            android:layout_margin="3dp"
-            android:textSize="18sp"
-            />
-        <ImageView
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            app:srcCompat="@drawable/if_arrow_right_01_186409"
-            android:layout_gravity="center"
-            />
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="Settings"
+                    android:textColor="@color/white"
+                    android:gravity="center_vertical"
+                    android:layout_margin="3dp"
+                    android:textSize="18sp"
+                    />
+                <ImageView
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
+                    app:srcCompat="@drawable/if_arrow_right_01_186409"
+                    android:layout_gravity="center"
+                    />
+            </LinearLayout>
 
 
-<View
-    android:layout_width="match_parent"
-    android:layout_height="1dp"
-    android:background="@color/medium_grey"
-    />
 
 
-</LinearLayout>
+        </LinearLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+
+</android.support.design.widget.CoordinatorLayout>
+
