--- a/app/src/main/res/layout/about_fragment.xml
+++ b/app/src/main/res/layout/about_fragment.xml
@@ -66,7 +66,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
-                    android:background="@color/medium_grey"
+                    android:background="@color/white"
                     android:alpha="0.2"
                     />
 
@@ -104,7 +104,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
-                    android:background="@color/medium_grey"
+                    android:background="@color/white"
                     android:alpha="0.2"
                     />
                 <LinearLayout
@@ -140,7 +140,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="0.2dp"
-                    android:background="@color/medium_grey"
+                    android:background="@color/white"
                     android:alpha="0.2"
                     />
     <LinearLayout
@@ -176,7 +176,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.2dp"
-        android:background="@color/medium_grey"
+        android:background="@color/white"
         android:alpha="0.2"
         />
            <LinearLayout
@@ -212,7 +212,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0.2dp"
-        android:background="@color/medium_grey"
+        android:background="@color/white"
         android:alpha="0.2"
         />
     <LinearLayout
