--- a/app/src/main/res/layout/redeem_layout.xml
+++ b/app/src/main/res/layout/redeem_layout.xml
@@ -34,9 +34,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="12sp"
+        android:textStyle="italic"
         android:text="By clicking Redeem, you agree to the Gift Card &amp; Promotional Code Terms and Conditions as applicable."
         fontPath="fonts/brownregular.ttf"
         />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
