--- a/app/src/main/res/layout/profile_fragment.xml
+++ b/app/src/main/res/layout/profile_fragment.xml
@@ -247,7 +247,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="2598 points"
+                    android:text="$25"
                     android:textColor="@color/white"
                     android:textSize="18sp"
                     fontPath="fonts/brownregular.ttf"
