--- a/app/src/main/res/layout/redeem_layout.xml
+++ b/app/src/main/res/layout/redeem_layout.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="280dp"
     android:orientation="vertical"
     android:layout_margin="15dp"
-    android:layout_height="wrap_content">
+    android:layout_height="200dp">
 
 
+    <ProgressBar
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:foregroundGravity="center"
+        android:id="@+id/progresssbar_redeem"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:indeterminateDrawable="@drawable/progress"
+        />
     <TextView
         android:id="@+id/balance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:layout_marginTop="20dp"
         android:visibility="gone"
         android:layout_marginBottom="20dp"
@@ -78,7 +90,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/redeem_edit_layout">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -129,4 +143,4 @@
             />
     </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
